# isa-forge

./: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: conda-tests.yml  tests.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PYDANTIC_AI_INTEGRATION.md  README.md  TESTING.md
src/isaforge/: __init__.py  __main__.py
src/isaforge/agents/: __init__.py  orchestrator.py  pydantic_agent.py  state.py
src/isaforge/agents/llm/: __init__.py  anthropic.py  base.py  google.py  ollama.py
src/isaforge/agents/prompts/: system.py  versioning.py
src/isaforge/agents/tools/: __init__.py  metadata_tools.py  ontology_tools.py
src/isaforge/cli/: __init__.py  main.py
src/isaforge/cli/commands/: generate.py  resume.py  sessions.py  validate.py
src/isaforge/cli/ui/: __init__.py  console.py  progress.py
src/isaforge/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
src/isaforge/evaluation/: benchmark_runner.py  evaluator.py
src/isaforge/isa_builder/: __init__.py  assay.py  builder.py  formatter.py  investigation.py  study.py  validator.py
src/isaforge/models/: __init__.py  confidence.py  session.py
src/isaforge/models/isa/: __init__.py  assay.py  investigation.py  protocol.py  sample.py  study.py
src/isaforge/models/metadata/: __init__.py  bioproject.py  ontology.py  publication.py
src/isaforge/observability/: __init__.py  circuit_breaker.py  logger.py  metrics.py
src/isaforge/ontology/: __init__.py  base.py  custom_terms.py  mapper.py  registry.py
src/isaforge/ontology/services/: __init__.py  ols.py  zooma.py
src/isaforge/reporting/: __init__.py  chat_log.py  confidence_summary.py  data_dictionary.py  provenance.py
src/isaforge/retrieval/: __init__.py  base.py
src/isaforge/retrieval/local/: __init__.py  csv_parser.py  json_parser.py  tsv_parser.py
src/isaforge/retrieval/ncbi/: __init__.py  bioproject.py  client.py  pubmed.py
src/isaforge/retrieval/publications/: __init__.py
src/isaforge/session/: __init__.py  database.py  manager.py  schemas.py
tests/: __init__.py  conftest.py
tests/fixtures/: ncbi_responses.py  ontology_responses.py
tests/integration/: test_ncbi_real.py  test_ontology_real.py
tests/unit/: test_confidence.py  test_config.py  test_core.py  test_correction_and_history.py  test_custom_terms.py  test_formatter.py  test_isa_builder.py  test_llm_client.py  test_local_parsers.py  test_metadata_models.py  test_models.py  test_ncbi_retrieval.py  test_observability.py  test_ontology_services.py  test_prompt_versioning.py  test_reporting.py  test_session_management.py  test_validator.py
