[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isaforge"
version = "0.1.0"
description = "Human-in-the-loop ISA-Tab generator using LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ISA-Forge Contributors" }
]
keywords = ["isa-tab", "metadata", "llm", "bioinformatics", "ncbi", "bioproject"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai>=0.0.14",
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.25",
    "isatools>=0.14",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "pypdf>=3.0",
    "python-dotenv>=1.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
tracing = [
    "langsmith>=0.1",
]
all = [
    "isaforge[dev,tracing]",
]

[project.scripts]
isaforge = "isaforge.cli.main:app"

[project.urls]
Homepage = "https://github.com/isaforge/isa-forge"
Documentation = "https://github.com/isaforge/isa-forge#readme"
Repository = "https://github.com/isaforge/isa-forge"
Issues = "https://github.com/isaforge/isa-forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/isaforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require network/API access)",
    "slow: marks tests as slow running",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["isaforge"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 100
target-version = ["py310"]
